2010-12-20 gabriel
* Added page to Login and script to Logout
* Initial implementation to share documents in UNG.
* Added redirect to be possible open the document with the key.

2010-12-16 gabriel
* Implemented feature to change the state of Document via UNG Theme

2010-12-14 gabriel
* Added default reference for templates.
* Refactor code to create the documents allowed in UNG using ERP5 System Templates.
* Added one preference and one template for each allowed object in UNG Web Site

2010-12-13 gabriel
* Remove all categories because for now all ung sections are domains only

2010-12-10 gabriel
* Refactored code to be possible make upload of Spreadsheet Documents.

2010-12-10 gabriel
* Added box and feature to make upload of Text documents.

2010-12-07 gabriel
* Added feature to be possible filter the Listbox according to the Portal Type

2010-12-06 gabriel
* refactor the script WebSection_deleteObjectList to remove completely the objects with state 'deleted'.

2010-12-06 gabriel
* Added one domain and categories to filter the documents in listbox.

2010-12-04 gabriel
* Refactor script to not delete object completely but only change the state in the first time. The goals is only remove the object completely on the trash section.

2010-11-12 gabriel
* clean up css to show records number of listbox in toolbar

2010-11-11 gabriel
* Added page navigation to listbox

2010-11-05 gabriel
* Implemented action to rename document and added script to do it.

2010-10-29 gabriel
* added dropdown menu to create new documents and css style for it

2010-10-26 gabriel
* Remove not used attributes in ung template and added Jquery to change the content width dynamically

2010-10-25 gabriel
* Added feature to search documents by text and change 'Refresh' button to reset the query

2010-10-21 gabriel
* Added action to create new Web documents

2010-10-19 gabriel
* Added ERP5 Form to show contents allowed in UNG WebSite and added new styles to listbox

2010-10-14 gabriel